fix: increase sidebar avatar border thickness for improved visibility

--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -147,7 +147,7 @@
     position: relative;
     display: inline-block;
     border-radius: 50%;
-    border: 2px solid #000000;
+    border: 2.5px solid #000000;
   }
 
 
